tests/ui/app_error/fail/enum_missing_variant.stderr
error: all variants must use #[app_error(...)] to derive AppError conversion
 --> tests/ui/app_error/fail/enum_missing_variant.rs:8:5
  |
8 | /     #[error("without")]
9 | |     Without,
  | |___________^

warning: unused import: `AppErrorKind`
 --> tests/ui/app_error/fail/enum_missing_variant.rs:1:17
  |
1 | use masterror::{AppErrorKind, Error};
  |                 ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
